# oigenerator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: comparer.h  config.h  filesystem.h  filetype.h  utils.hpp
src/: CMakeLists.txt  config.cc  main.cc
src/comparer/linebylinecomparer/: CMakeLists.txt  linebylinecomparer.cc  linebylinecomparer.h
src/compiler/: CMakeLists.txt  compiler.cc  compiler.h
src/config/: CMakeLists.txt
src/configparser/: CMakeLists.txt  configparser.cc  configparser.h
src/dataconfigparser/: CMakeLists.txt  dataconfigparser.cc  dataconfigparser.h
src/runner/: CMakeLists.txt  runner.cc  runner.h
tests/: CMakeLists.txt
tests/comparer/: CMakeLists.txt
tests/comparer/linebylinecomparer/: CMakeLists.txt  test.cc
tests/compiler/: CMakeLists.txt  test.cc
tests/configparser/: CMakeLists.txt  test.cc
tests/dataconfigparser/: CMakeLists.txt  test.cc
tests/runner/: CMakeLists.txt  test.cc
tests/runner/tests/: aplusb.cpp  errorfile.cpp  extracommand.cpp
unix/: CMakeLists.txt  watcher_linux.cpp
